@@ -15,6 +15,8 @@ VERSION 2.9.0
    * Fix background color of the lyrics applet, thanks to Stefano Pettini. (BR 314854)
    * Fix Organize tracks / Guess tags presets not persisted properly;
      thanks to Stefano Pettini. (BR 226144)
+   * Fix MPRIS2 DesktopEntry name, makes media controls in Plasma 5.7 taskbar work
+     again; thanks to Antonio Rojas, Rex Dieter. (BR 365275)
 
 
 VERSION 2.8.90
